--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "apexcharts": "^4.5.0",
+    "axios": "^1.8.4",
     "next": "15.2.3",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.5",
